[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Pause.gd" type="Script" id=1]
[ext_resource path="res://UI/BlackTexture.png" type="Texture" id=2]
[ext_resource path="res://UI/KeyboardModernBlack.png" type="Texture" id=3]
[ext_resource path="res://Theme.tres" type="Theme" id=4]
[ext_resource path="res://UI/Minecraftia-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
Label/fonts/font = SubResource( 1 )

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="Backgorund" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.509804 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 100.0
margin_top = 44.0
margin_right = 220.0
margin_bottom = 136.0

[node name="Continue" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 28.0
theme = ExtResource( 4 )
text = "Continue"
flat = true

[node name="Fullscreen" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 120.0
margin_bottom = 60.0
theme = ExtResource( 4 )
text = "Fullscreen"
flat = true

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 120.0
margin_bottom = 92.0
theme = ExtResource( 4 )
text = "Quit Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Label" parent="."]
margin_left = 36.0
margin_top = 52.0
margin_right = 60.0
margin_bottom = 63.0
theme = SubResource( 2 )
text = "Move"

[node name="Roll" type="Label" parent="."]
margin_left = 37.0
margin_top = 90.0
margin_right = 55.0
margin_bottom = 101.0
theme = SubResource( 2 )
text = "Roll"

[node name="Attack" type="Label" parent="."]
margin_left = 31.0
margin_top = 116.0
margin_right = 62.0
margin_bottom = 127.0
theme = SubResource( 2 )
text = "Attack"

[node name="FullscreenLabel" type="Label" parent="."]
margin_left = 24.0
margin_top = 162.0
margin_right = 78.0
margin_bottom = 173.0
theme = SubResource( 2 )
text = "Fullscreen"

[node name="Pause" type="Label" parent="."]
margin_left = 24.0
margin_top = 147.0
margin_right = 54.0
margin_bottom = 158.0
theme = SubResource( 2 )
text = "Pause"

[node name="W" type="Sprite" parent="."]
position = Vector2( 27.4, 71 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 96, 32, 16, 16 )

[node name="A" type="Sprite" parent="."]
position = Vector2( 13.4, 82 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="S" type="Sprite" parent="."]
position = Vector2( 27.4, 82 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 32, 32, 16, 16 )

[node name="D" type="Sprite" parent="."]
position = Vector2( 41.4, 82 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 48, 0, 16, 16 )

[node name="ArrowUp" type="Sprite" parent="."]
position = Vector2( 76.4, 71 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 96, 96, 16, 16 )

[node name="ArrowDown" type="Sprite" parent="."]
position = Vector2( 76.4, 82 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 96, 112, 16, 16 )

[node name="ArrowLeft" type="Sprite" parent="."]
position = Vector2( 62.4, 82 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 80, 112, 16, 16 )

[node name="ArrowRight" type="Sprite" parent="."]
position = Vector2( 90.4, 82 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 112, 16, 16 )

[node name="Z" type="Sprite" parent="."]
position = Vector2( 78, 110 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 16, 48, 16, 16 )

[node name="Space" type="Sprite" parent="."]
position = Vector2( 38, 110 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 48, 160, 80, 16 )

[node name="X" type="Sprite" parent="."]
position = Vector2( 38, 137 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 32, 16, 16 )

[node name="J" type="Sprite" parent="."]
position = Vector2( 54, 137 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 16, 16, 16, 16 )

[node name="ESC" type="Sprite" parent="."]
position = Vector2( 14, 152 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 32, 48, 16, 16 )

[node name="F11" type="Sprite" parent="."]
position = Vector2( 15, 167 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 38, 96, 18, 16 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
